--- a/04.CSS Box Model/L4_04_Navigation-inline-block/style.css
+++ b/04.CSS Box Model/L4_04_Navigation-inline-block/style.css
@@ -29,7 +29,7 @@ nav a {
     text-decoration: none;
 }
 
-h1 {
+main h1 {
     font-family: Times, 'Times New Roman', serif;
     font-weight: lighter;
 }
