--- a/04.CSS Box Model/L4_05_Photo-gallery-inline-block/style.css
+++ b/04.CSS Box Model/L4_05_Photo-gallery-inline-block/style.css
@@ -1,11 +1,27 @@
-html {
-    padding: 2px 4px;
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    background: rgb(234, 234, 234);
+}
+
+.gallery {
+    margin: 60px 120px;
 }
 
 .gallery li {
     display: inline-block;
     border: 0.4rem solid black;
-    padding: 8px;
-    margin-right: 5px;
+    padding: 15px;
+    margin: 12px 8px;
+    width: 30%;
+    vertical-align: middle;
+}
+
+.gallery li img {
+    width: 100%;
 }
 
