--- a/04.CSS Box Model/L4_05_Photo-gallery-inline-block/style.css
+++ b/04.CSS Box Model/L4_05_Photo-gallery-inline-block/style.css
@@ -17,7 +17,7 @@ body {
     border: 0.4rem solid black;
     padding: 15px;
     margin: 12px 8px;
-    width: 30%;
+    width: 30%; //or max-width: 300px -> max-size of the largest photo
     vertical-align: middle;
 }
 
