--- a/Exams/12.08.2020/02. Photography/responsive.css
+++ b/Exams/12.08.2020/02. Photography/responsive.css
@@ -1,1 +1,13 @@
-/* TODO: Add media queries */
+@media all and (max-width: 600px){
+    .thumbnails {
+        flex-direction: column;
+    }
+
+    .thumbnails div {
+        width: 100%;
+    }
+
+    .thumbnails a img {
+        max-height: 200px;
+    }
+}
