--- a/Exams/28.03.2020/02. Beats/style.css
+++ b/Exams/28.03.2020/02. Beats/style.css
@@ -143,3 +143,79 @@ body {
     border: none;
     max-height: 50px;
 }
+
+.try {
+    background: #575757;
+    max-height: 250px;
+    text-align: center;
+    padding: 40px 0;
+}
+
+.try-info {
+    justify-content: center;
+    display: flex;
+    align-items: center;
+}
+
+.try-title {
+    text-transform: uppercase;
+    margin-left: 20px;
+    color: white;
+    font-weight: lighter;
+    font-size: 32px;
+}
+
+.try-title-cta {
+    font-weight: bolder;
+}
+
+.try a {
+    color: white;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 32px;
+    border-bottom: 3px solid gray;
+}
+
+.give-life {
+    display: flex;
+    width: 100%;
+    margin-top: 0;
+}
+
+.give-life-img{
+    margin-top: -3px;
+}
+
+.give-life-info {
+    display: flex;
+    background: #DADADA;
+    width: 100%;
+    margin-bottom: 4px;
+}
+.give-life-info-text {
+    text-align: center;
+}
+
+.give-life-info-text-title {
+    font-size: 100px;
+    text-transform: uppercase;
+    font-weight: bolder;
+}
+
+.give-life-info-text-subtitle {
+    font-size: 40px;
+    letter-spacing: 0;
+}
+
+.give-life-info-text-subtitle span {
+    color: #FE0101;
+    text-transform: uppercase;
+    font-weight: bolder;
+}
+
+.page-footer {
+    text-align: center;
+    font-size: 20px;
+    margin: 30px;
+}
